apps/gordito/zot-proxmox/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot-svc
  namespace: zot
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
  # No selector - se usa con Endpoints manual
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zot-svc
  namespace: zot
subsets:
  - addresses:
      - ip: 192.168.1.135
    ports:
      - name: http
        port: 8080
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zot-ingress
  namespace: zot
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.kubernetes.io/ignore: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "zot.dimarco-server.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zot-svc
                port:
                  name: http
  tls:
    - hosts:
        - "zot.dimarco-server.site"
      secretName: zot-tls
